--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,18 @@
 name: Build
-on: [push, pull_request]
+
+on:
+  push:
+    branches: [ "**" ]
+    tags:
+      - 'v*.*.*'       # also run on version tags
+  pull_request:
+
 jobs:
   build:
     strategy:
       matrix:
         java: [11-jdk, 17-jdk, 21-jdk]
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     container:
       image: eclipse-temurin:${{ matrix.java }}
       options: --user root
@@ -16,3 +23,36 @@ jobs:
       - uses: gradle/wrapper-validation-action@v1
       - run: chmod +x ./gradlew
       - run: ./gradlew build test --stacktrace
+
+  release:
+    # run only when this push is a tag that matches v*.*.*
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: build           # wait until all build matrix jobs pass
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Publish to GitHub Packages
+        run: ./gradlew publish
+        env:
+          USERNAME: ${{ github.actor }}
+          PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
