--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,8 @@ jobs:
     strategy:
       matrix:
         java: [11-jdk, 17-jdk, 21-jdk]
-    runs-on: self-hosted
+    #runs-on: self-hosted
+    runs-on: ubuntu-latest
     container:
       image: eclipse-temurin:${{ matrix.java }}
       options: --user root
